syntax = "proto3";

package proto;

// KeyManagement Interface
service KeyManagement {

  // CreateKey creates as asymmetric key pair and returns the PublicKey
  rpc CreateKey(Void) returns (PublicKey) {}

  // DeleteKey deletes the key associated with a keyID
  rpc DeleteKey(KeyID) returns (Void) {}

  // GetKeyInfo returns the PublicKey associated with a keyID
  rpc GetKeyInfo(KeyID) returns (PublicKey) {}
}

// Signer Interface
service Signer {
  // Sign calculates a cryptographic signature using the Key associated with a KeyID and returns the signature
  rpc Sign(SignatureRequest) returns (Signature) {}
}

// KeyID holds an ID that is used to reference the key
message KeyID {
  string ID = 1;
}

// PublicKey has a KeyID that is used to reference the key and opaque bytes of a publicKey
message PublicKey {
  KeyID keyID = 1;
  bytes publicKey = 2;
}

// Signature specifies a KeyID that was used for signing and signed content
message Signature {
  KeyID keyID = 1;
  bytes content = 2;
}

// SignatureRequests specifies a KeyID for signing and content to be signed
message SignatureRequest {
  KeyID keyID = 1;
  bytes content = 2;
}

// Void represents an empty message type
message Void {
}
